# selfLearn

./: README.md
01_深度学习基础补充/: aboutLoss.docx
02_3D-reconstruction/: README.md
02_3D-reconstruction/nerf/: README.md  基于nerf三维重建总结.docx
03_Detection/: README.md
04_segMentation/: BiSeNet Bilateral Segmentation Network for.docx  README.md
05_track/: README.md
05_track/01_Kalman/: example.py
05_track/02_correlationFilter/: 01_Mosse相关滤波山之作.md
06_machine_learning/01_classification/: READMEN.md
06_machine_learning/02_概率论/: README.md
09_projec_basic/00_计算机基础/: 00_计算机概念解读.md  01_深入理解计算机系统.md  02_cmake菜鸟教程.md  02_现代cmake.md  05_git使用.md
09_projec_basic/01_高性能计算/: 01_高性能计算概念简介.md  README.md  并行计算基础文档总结.docx
09_projec_basic/01_高性能计算/openMP/: CMakeLists.txt  README.md  demo  main.cpp  test.sh
09_projec_basic/01_高性能计算/openMP/sessions/: session1.h
09_projec_basic/01_高性能计算/tools/: tools.h
09_projec_basic/01_高性能计算/tools/3rd/opencv/include/opencv2/: imgcodecs.hpp  videoio.hpp
09_projec_basic/01_高性能计算/tools/3rd/opencv/include/opencv2/core/: opengl.hpp  (+1 more)
09_projec_basic/02_移植框架/rk3588/: README.md
09_projec_basic/02_移植框架/sophgo/01_docRead/: 01_SophgoSDK开发指南.md  01_产品分析.md
09_projec_basic/02_移植框架/visionDeployHub/: design.md
09_projec_basic/notes/: 01_how to build opencv on arm.md
09_工程积累/01_高性能计算/openMP/: README.md
09_工程积累/02_移植框架/novatek/: README.md
09_工程积累/02_移植框架/novatek/1 doc/: 项目进度记录.docx
09_工程积累/02_移植框架/rk3588/: 并行计算基础文档总结.docx
09_工程积累/03_git/: 00_git常用基本操作.md
09工程积累/00_计算机基础/: 计算机基础知识.docx
09工程积累/02_移植框架/TRT/: tensorrt学习记录.docx
(+1 files in other folders)
